[package]
name = "ruft"
version = "0.1.0"
authors = ["S1T"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
tonic = "0.1.0"
prost = "0.6"
futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.1.0"
