[package]
name = "ruft"
version = "0.1.0"
authors = ["S1T"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33"
crossbeam-channel = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7"
cancellable-timer = "0.1.0"
